# mpr.makedeb.org

./: .env  .gitignore  Cargo.toml  Dockerfile  MIGRATING.md  docker-compose.yml  justfile  mpr.env  package-lock.json  test.sh
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
src/: http.rs  main.rs  util.rs
src/cli/: cli.rs
src/entities/: accepted_terms.rs  account_types.rs  api_keys.rs  api_rate_limit.rs  bans.rs  dependency_types.rs  licenses.rs  mod.rs  official_providers.rs  package_bases.rs  package_blacklist.rs  package_comaintainers.rs  package_comments.rs  package_depends.rs  package_keywords.rs  package_licenses.rs  package_notifications.rs  package_relations.rs  package_requests.rs  package_sources.rs  package_votes.rs  packages.rs  prelude.rs  prelude.rs2  relation_types.rs  request_types.rs  sessions.rs  ssh_pub_keys.rs  terms.rs  tu_vote_info.rs  tu_votes.rs  users.rs
src/routes/: media.rs  misc.rs  mod.rs
src/template/: mod.rs
templates/partials/: layout.html
